Made Text White for Visibility Issues

--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -17,12 +17,16 @@
   }
 }
 
+.home-screen-content {
+
+
+}
 
 #menu{
   position:fixed;
   top: 8%;
-  left:22%;
-  right: 22%;
+//  left:22%;
+//  right: 22%;
   height: 40px;
   z-index: 70;
   width: 100%;
@@ -30,7 +34,8 @@
   margin:0;
   p {
     font-size: 48pt;
-    color: #000000;
+    color: #FFFFFF;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     margin-bottom: 2.5%;
   }
 }
@@ -49,7 +54,8 @@
     margin: 10px;
     font-size: 18pt;
     a {
-      color: #000000;
+      color: #FFFFFF;
+      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     }
   }
 
@@ -64,14 +70,14 @@
 }
 
 #home_container {
-  height: 350px;
   margin-top: 7.5%;
 
 }
 
 .copy-text {
   margin-top: 5%;
-  color: #000000;
+  color: #FFFFFF;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .home-logo {
@@ -97,7 +103,8 @@
 }
 
 .about-text {
-  color: #000000;
+  color: #FFFFFF;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 .buttons {
   z-index: 1;
@@ -111,15 +118,18 @@
 }
 
 .schools-text {
+  text-align: center;
   font-size: xx-large;
   line-height: 125%;
-  color: #000000;
+  color: #FFFFFF;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .schools-block {
   font-size: x-large;
   line-height: 125%;
-  color: #000000;
+  color: #FFFFFF;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   li {
     list-style-type: none;
     padding-bottom: 5%;
@@ -128,6 +138,7 @@
 
 
 #schools-container {
+  opacity: 1.0;
   height: 350px;
   margin-top: 7.5%;
 }
@@ -135,15 +146,13 @@
 #business-section {
   background-image: image-url("businesses-background.jpg");
   background-size: cover;
-}
-
-#business-slide-1 {
-
+  opacity: 75%;
 }
 
 .business-text {
   font-size: xx-large;
-  color: black;
+  color: #FFFFFF;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   text-align: center;
   line-height: 125%;
   margin-top: 7.5%;
@@ -159,17 +168,19 @@
 #ux-menu {
     position: fixed;
     z-index: 9;
-    color: #f2f2f2;
+  color: #FFFFFF;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     padding: 25px 0 0 0;
     float: right;
-    margin: 40% 5% 5% 75%;
+    margin: 42% 5% 15% 75%;
     li {
       display: inline;
       margin-bottom: auto;
       padding: 2.5%;
     }
     a {
-      color: white;
+      color: #FFFFFF;
+      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
       font-weight: 25%;
       font-size: large;
     }
